manifest/main/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: ingress
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: public # class is provided by microk8s
    # Securing Ingress Resources https://cert-manager.io/docs/usage/ingress/
    cert-manager.io/issuer: my-letsencrypt-issuer
spec:
  tls:
  - hosts:
    - raport.sin.net.pl
    secretName: onlex-sinnet-prd-secret7
  rules:
  - host: raport.sin.net.pl
    http:
      paths:

        - path: /graphiql
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /graphql
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /voyager
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /altair
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /vendor
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080
        - path: /actuator
          pathType: Prefix
          backend:
            service:
              name: webapi-svc
              port:
                number: 8080

        - path: /
          pathType: Prefix
          backend:
            service:
              name: webapp-svc
              port:
                number: 80

# ---

# # Virtual services to redirect to proper namespace

# apiVersion: v1
# kind: Service
# metadata:
#   name: webapp-svc
#   namespace: ingress
# spec:
#   type: ExternalName
#   externalName: webapp-svc.onlex-sinnet-prd.svc.cluster.local
